# Chracter-Recognition

./: CMakeLists.txt  README.md  chracters.txt  classifications.txt  imagesArranged.txt  main.cpp
